# claudepath

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/claudepath/: __init__.py  backup.py  cli.py  encoder.py  mover.py  scanner.py  updaters.py
tests/: test_cli.py  test_encoder.py  test_mover.py  test_scanner.py  test_updaters.py
